---------------------------------------------------------------------------------------------------
Version: 2.4.18
Date: ?
  Changes:
    - Reduced the stack size of mega drill heads from 100 to 5.
    - allowed productivity modules in the improved ceramic recipe (https://github.com/pyanodon/pybugreports/issues/540)
    - Misc. locale updates
---------------------------------------------------------------------------------------------------
Version: 2.4.17
Date: 2024-6-28
  Changes:
    - Changed the alloy smelter description. (https://github.com/pyanodon/pybugreports/issues/535)
    - Nerfed big aluminium mine module slots to 1 to match other big mines.
    - Changed molten quartz 6 to use lithium peroxide instead of fuel rods
    - Buffed nexelit pulp recipes
---------------------------------------------------------------------------------------------------
Version: 2.4.16
Date: 2024-6-3
  Changes:
    - Added circuit connectivity to big mines (credit: JStMorgan) (https://github.com/pyanodon/pybugreports/issues/415)
---------------------------------------------------------------------------------------------------
Version: 2.4.15
Date: 2024-3-24
  Changes:
    - Removed phosphate big mines from the productivity list (https://github.com/pyanodon/pybugreports/issues/425)
    - Fixed some resources couldnt be disabled in map setup screen
---------------------------------------------------------------------------------------------------
Version: 2.4.14
Date: 2024-3-13
  Changes:
    - Fixed that low grade copper rejects didnt actually say they were copper
    - Fixed the vanilla nuclear reactor glow effects didnt work with pys added fuel cells correctly 
---------------------------------------------------------------------------------------------------
Version: 2.4.13
Date: 2024-1-19
  Changes:
    - Updated technology name locale so that ore processing tier names are as expected. for example: Iron processing - Stage 5