@@ -52,7 +52,7 @@ RECIPE {
     },
     results = {
         {type = "fluid", name = "liquid-nitrogen", amount = 5},
-        {type = "fluid", name = "steam", amount = 100, temperature = 150}
+        {type = "fluid", name = "steam", amount = 100, temperature = 150, catalyst_amount = 100}
     },
     main_product = "liquid-nitrogen",
     icon = "__pyfusionenergygraphics__/graphics/icons/compress-nitrogen.png",
